Deployment/Kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monthlydata-api
  labels:
    name: monthlydata-api
